[mkcamp-29] Added larger Makey. Corrected alignment and padding.

--- a/wp-content/themes/makeblog/css/day-of-making.css
+++ b/wp-content/themes/makeblog/css/day-of-making.css
@@ -8484,6 +8484,9 @@ Maker Camp Banner Waist
 .paddme-maker-camp {
   padding: 10px 0 10px 10px;
 }
+.paddme-maker-camp-left {
+  padding: 20px 0;
+}
 .maker-camp h3 a {
   color: #cc2229;
   font-size: 20px;
