--- a/wp-content/themes/makeblog/less/make/style.less
+++ b/wp-content/themes/makeblog/less/make/style.less
@@ -3226,6 +3226,10 @@ Maker Camp Banner Waist
 	padding: 10px 0 10px 10px;
 }
 
+.paddme-maker-camp-left {
+	padding: 20px 0;
+}
+
 .maker-camp h3 a {
 	color: #cc2229;
 	font-size: 20px;
